gccida/c3/k6_store_unit_blockage
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/insn-attrtab.c:25467:39: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( executing_insn, "insn-attrtab.c", 25175, "k6_store_unit_blockage"); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/insn-attrtab.c:25467:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( executing_insn, "insn-attrtab.c", 25175, "k6_store_unit_blockage"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/insn-attrtab.c:25478:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !symbolic_operand( recog_data_0.operand[1], SImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/insn-attrtab.c:25495:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !symbolic_operand( recog_data_0.operand[1], DImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/insn-attrtab.c:25514:54: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative == 2 || pic_symbolic_operand( recog_data_0.operand[2], DImode) ) 
                                                     ^~~~~~~~~~~~
                                                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/insn-attrtab.c:25521:54: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative == 2 || pic_symbolic_operand( recog_data_0.operand[2], SImode) ) 
                                                     ^~~~~~~~~~~~
                                                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/insn-attrtab.c:25528:49: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative || pic_symbolic_operand( recog_data_0.operand[2], SImode) ) 
                                                ^~~~~~~~~~~~
                                                recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/insn-attrtab.c:25572:48: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative != 1 || const0_operand( recog_data_0.operand[2], DImode) ) 
                                               ^~~~~~~~~~~~
                                               recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/insn-attrtab.c:25583:48: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative != 1 || const0_operand( recog_data_0.operand[2], SImode) ) 
                                               ^~~~~~~~~~~~
                                               recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage/src/obj/insn-attrtab.o] Error 1
